# EssexEngineKernel

./: CMakeLists.txt  Entry.cpp  Kernel.cpp  Kernel.h
src/: Entry.cpp  Kernel.cpp  Kernel.h
